UV Unwrap - conformal mapping setting lost, has to be selected before each unwrap. 2.63 #31302

Closed
opened 2012-05-05 01:04:33 +02:00 by Mark Knight · 7 comments

%%%Blender 2.63 Mac PPC: Each time an item is unwrapped (any item as far as I can tell) if you want conformal selected it has to be selected again, instead of the previous behaviour where the setting was remembered.

This apparently minor bug is a really serious nuisance for me as I use conformal almost exclusively and would have to select it dozens or hundreds of times during the average modelling project whereas in previous versions I only had to set it once!

The default Blender will show the problem once you add seams to the cube so I have not uploaded a file.

PowerMac G5 Quad.
Nvidia GeForce 6600 256Mb.
Mac OS X 10.5.8%%%

%%%Blender 2.63 Mac PPC: Each time an item is unwrapped (any item as far as I can tell) if you want conformal selected it has to be selected again, instead of the previous behaviour where the setting was remembered. This apparently minor bug is a really serious nuisance for me as I use conformal almost exclusively and would have to select it dozens or hundreds of times during the average modelling project whereas in previous versions I only had to set it once! The default Blender will show the problem once you add seams to the cube so I have not uploaded a file. PowerMac G5 Quad. Nvidia GeForce 6600 256Mb. Mac OS X 10.5.8%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Not fixed in 2.63a Mac PPC, I just tried it. Same system, bug still present.%%%

%%%Not fixed in 2.63a Mac PPC, I just tried it. Same system, bug still present.%%%

%%%It seems this was not fixed properly for 2.63a, but should be fixed now:
http://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=46579

I can confirm it wasn't working in 2.63a but with the latest builds from http://builder.blender.org/download/ it works for me.%%%

%%%It seems this was not fixed properly for 2.63a, but should be fixed now: http://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=46579 I can confirm it wasn't working in 2.63a but with the latest builds from http://builder.blender.org/download/ it works for me.%%%
Author

%%%This still needs investigation; the release notes stated that it was fixed in 2.63a and it wasn't; someone needs to work out how that happened and address the problem, otherwise there nay be further occurrences and a lot of users and developers time wasted.

Sadly there is no PowerMac build yet so I may have to remain with 2.49b for a while longer.%%%

%%%This still needs investigation; the release notes stated that it was fixed in 2.63a and it wasn't; someone needs to work out how that happened and address the problem, otherwise there nay be further occurrences and a lot of users and developers time wasted. Sadly there is no PowerMac build yet so I may have to remain with 2.49b for a while longer.%%%

%%%I verified that it doesn't work in 2.63a but does in the latest build, and pointed to the fix that did it. Don't see the need to do anything else about this, human error happens.%%%

%%%I verified that it doesn't work in 2.63a but does in the latest build, and pointed to the fix that did it. Don't see the need to do anything else about this, human error happens.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31302
No description provided.