Fix #31302: UV unwrap no longer remember last conformal/angle based unwrapper choice with bmesh.